--- a/.github/workflows/GitHub-Profile-3D-Contrib.yml
+++ b/.github/workflows/GitHub-Profile-3D-Contrib.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Commit & Push
         run: |
           git config user.name cnsdwu
-          git config user.email 90****43@qq.com
+          git config user.email cnsdwu@163.com
           git add -A .
           git commit -m "generated"
           git push
